--- a/from.html
+++ b/from.html
@@ -35,11 +35,10 @@
 
 
 	<div class="pics">
-
+<img src ="images/Altamont.jpg">
 
 	</div>
-	<p>
-		                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
-		Catherine Hunter was born and raised in Altaont New York. 
+	<p class="pageText">
+		Catherine Hunter was born and raised in Altaont New York. Altamont is a small town, and there aren't that many places to visit or recognizable landmarks. The area that I remember the most from my visits there, are the YMCA where my grandmother works. I can understand why she move to Boston instead of living there.
 
 </html>
