--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Interview with Caleb Bloch</title>
+	<title>Interview with Catherine Hunter</title>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
